--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,2 @@
 node_modules
-src/bower_components/*
-
-!src/bower_components/jquery/
-src/bower_components/jquery/*
-!src/bower_components/jquery/dist/
-
-!src/bower_components/zepto/
-src/bower_components/zepto/*
-!src/bower_components/zepto/zepto.*js
+tmp
